--- a/BE/deep/Dockerfile
+++ b/BE/deep/Dockerfile
@@ -1,4 +1,4 @@
 FROM azul/zulu-openjdk:17
 WORKDIR /spring
-COPY ./build/libs/deep-0.0.1-SNAPSHOT.jar
+COPY ./build/libs/deep-0.0.1-SNAPSHOT.jar ./server.jar
 ENTRYPOINT ["java", "-jar", "server.jar"]
