--- a/FE/deep/package.json
+++ b/FE/deep/package.json
@@ -12,7 +12,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.6.8",
         "react": "^18.2.0",
-        "react-cookie": "^7.1.4",
+        "react-aws-s3": "^1.5.0",
         "react-daum-postcode": "^3.1.3",
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
@@ -20,11 +20,12 @@
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
         "styled-components": "^6.1.8",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set HTTPS=true&&set SSL_CRT_FILE=_wildcard.deeep.site+1.pem&&set SSL_KEY_FILE=_wildcard.deeep.site+1-key.pem&&react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
