--- a/FE/deep/package.json
+++ b/FE/deep/package.json
@@ -20,6 +20,7 @@
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "react-spinners": "^0.13.8",
         "redux": "^5.0.1",
         "redux-persist": "^6.0.0",
         "styled-components": "^6.1.8",
