--- a/BE/deep/build.gradle
+++ b/BE/deep/build.gradle
@@ -60,7 +60,9 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3'
 	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.2'
 
-	implementation group: 'com.cwbase', name: 'logback-redis-appender', version: '1.1.6'
+// https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
 
 }
