--- a/FE/deep/package.json
+++ b/FE/deep/package.json
@@ -12,11 +12,13 @@
         "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
         "@toast-ui/react-editor": "^3.2.3",
         "axios": "^1.6.8",
+        "event-source-polyfill": "^1.0.31",
         "prismjs": "^1.29.0",
         "react": "^17.0.2",
         "react-daum-postcode": "^3.1.3",
         "react-dom": "^17.0.2",
         "react-icons": "^5.2.1",
+        "react-paginate": "^8.2.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
